--- a/src/styles/config/global.scss
+++ b/src/styles/config/global.scss
@@ -1,15 +1,17 @@
 @include theme-main();
 
-html, body {
-	@include cover();
+html,
+body {
+  @include cover();
 }
 
 body {
-	color: getVar(color-black);
-	margin: 0;
+  color: getVar(color-black);
+  margin: 0;
   padding: getVar(padding-md);
-	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 }
 
 nav > ul {
@@ -22,51 +24,54 @@ nav > ul {
 // default from Svelte template
 
 a {
-	color: getVar(play);
-	text-decoration: none;
+  color: getVar(play);
+  text-decoration: none;
 }
 
 a:hover {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 a:visited {
-	color: getVar(handles);
+  color: getVar(handles);
 }
 
 label {
-	display: block;
+  display: block;
 }
 
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	-webkit-padding: 0.4em 0;
-	padding: getVar(padding-sm) getVar(padding-md);
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid getVar(gray-1);
-	border-radius: 3px;
+input,
+button,
+select,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  -webkit-padding: 0.4em 0;
+  padding: getVar(padding-sm) getVar(padding-md);
+  margin: 0 0 0.5em 0;
+  box-sizing: border-box;
+  border: 1px solid getVar(gray-1);
+  border-radius: 3px;
 }
 
 input:disabled {
-	color: getVar(gray-1);
+  color: getVar(gray-1);
 }
 
 button {
-	color: getVar(color-dark);
-	background-color: getVar(color-light);
-	outline: none;
+  color: getVar(color-dark);
+  background-color: getVar(color-light);
+  outline: none;
 }
 
 button:disabled {
-	color: getVar(gray-3);
+  color: getVar(gray-3);
 }
 
 button:not(:disabled):active {
-	background-color: getVar(gray-2);
+  background-color: getVar(gray-2);
 }
 
 button:focus {
-	border-color: getVar(gray-4);
+  border-color: getVar(gray-4);
 }
